parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON cicloVars cicloFuncion bloque
Rule 2     cicloVars -> vars cicloVars
Rule 3     cicloVars -> <empty>
Rule 4     vars -> VAR auxVar1
Rule 5     auxVar1 -> idVars COLON tipo SEMICOLON auxVar1
Rule 6     auxVar1 -> <empty>
Rule 7     idVars -> ID ambIdVars
Rule 8     ambIdVars -> COMMA idVars
Rule 9     ambIdVars -> <empty>
Rule 10    tipo -> auxTipo1
Rule 11    tipo -> CHAR
Rule 12    auxTipo1 -> auxTipo2 LBRACKET CTEINT RBRACKET
<<<<<<< HEAD
Rule 13    auxTipo1 -> auxTipo2
Rule 14    auxTipo2 -> INT
Rule 15    auxTipo2 -> BOOL
Rule 16    auxTipo2 -> STRING
Rule 17    auxTipo2 -> FLOAT
Rule 18    bloque -> LBRACE cicloBloque RBRACE
Rule 19    cicloBloque -> estatuto cicloBloque
Rule 20    cicloBloque -> <empty>
Rule 21    estatuto -> asignacion
Rule 22    estatuto -> condicion
Rule 23    estatuto -> escritura
Rule 24    estatuto -> lectura
Rule 25    estatuto -> llamada
Rule 26    estatuto -> ciclo
Rule 27    asignacion -> ID auxAsignacion1 EQUALA expresion SEMICOLON
Rule 28    auxAsignacion1 -> LBRACKET exp RBRACKET
Rule 29    auxAsignacion1 -> <empty>
Rule 30    escritura -> PRINT LPAREN auxEscritura1 RPAREN SEMICOLON
Rule 31    auxEscritura1 -> auxEscritura2 ambAuxEscritura1
Rule 32    ambAuxEscritura1 -> COMMA auxEscritura1
Rule 33    ambAuxEscritura1 -> <empty>
Rule 34    auxEscritura2 -> expresion
Rule 35    auxEscritura2 -> CTESTRING
Rule 36    expresion -> exp auxExpresion exp
Rule 37    expresion -> <empty>
Rule 38    auxExpresion -> GTHAN
Rule 39    auxExpresion -> LTHAN
Rule 40    auxExpresion -> NOTEQUAL
Rule 41    auxExpresion -> GETHAN
Rule 42    auxExpresion -> LETHAN
Rule 43    auxExpresion -> EQUAL
Rule 44    condicion -> IF LPAREN expresion RPAREN bloque auxCondicion SEMICOLON
Rule 45    auxCondicion -> ELSE bloque
Rule 46    auxCondicion -> <empty>
Rule 47    exp -> cicloExp
Rule 48    cicloExp -> termino ambExp
Rule 49    ambExp -> auxExp cicloExp
Rule 50    ambExp -> <empty>
Rule 51    auxExp -> PLUS
Rule 52    auxExp -> MINUS
Rule 53    termino -> cicloTermino
Rule 54    cicloTermino -> factor ambCicloTermino
Rule 55    ambCicloTermino -> auxTermino cicloTermino
Rule 56    ambCicloTermino -> <empty>
Rule 57    auxTermino -> MULTI
Rule 58    auxTermino -> DIVIDE
Rule 59    factor -> LPAREN expresion RPAREN
Rule 60    factor -> auxFactor varcte
Rule 61    auxFactor -> auxExp
Rule 62    auxFactor -> <empty>
Rule 63    varcte -> ID auxVarcte
Rule 64    varcte -> CTEINT
Rule 65    varcte -> CTEFLOAT
Rule 66    varcte -> CTECHAR
Rule 67    varcte -> CTEBOOL
Rule 68    varcte -> CTESTRING
Rule 69    auxVarcte -> LPAREN exp RPAREN
Rule 70    auxVarcte -> LBRACKET exp LBRACKET
Rule 71    auxVarcte -> <empty>
Rule 72    cicloFuncion -> funcion cicloFuncion
Rule 73    cicloFuncion -> <empty>
Rule 74    funcion -> FUNCTION ID LPAREN auxFunction RPAREN bloque
Rule 75    auxFunction -> parametros
Rule 76    auxFunction -> <empty>
Rule 77    parametros -> auxParametros
Rule 78    auxParametros -> tipo ID ambAuxParametros
Rule 79    ambAuxParametros -> COMMA auxParametros
Rule 80    ambAuxParametros -> <empty>
Rule 81    ciclo -> WHILE LPAREN expresion RPAREN bloque SEMICOLON
Rule 82    llamada -> ID LPAREN auxLlamada RPAREN
Rule 83    auxLlamada -> argumentos
Rule 84    auxLlamada -> <empty>
Rule 85    argumentos -> auxArgumentos1
Rule 86    argumentos -> <empty>
Rule 87    auxArgumentos1 -> exp ambAuxArgumentos1
Rule 88    ambAuxArgumentos1 -> COMMA auxArgumentos1
Rule 89    ambAuxArgumentos1 -> <empty>
Rule 90    lectura -> READ LPAREN ID RPAREN SEMICOLON
=======
Rule 13    auxTipo2 -> INT
Rule 14    auxTipo2 -> BOOL
Rule 15    auxTipo2 -> STRING
Rule 16    auxTipo2 -> FLOAT
Rule 17    bloque -> LBRACE cicloBloque RBRACE
Rule 18    cicloBloque -> estatuto cicloBloque
Rule 19    cicloBloque -> <empty>
Rule 20    estatuto -> asignacion
Rule 21    estatuto -> condicion
Rule 22    estatuto -> escritura
Rule 23    estatuto -> lectura
Rule 24    estatuto -> llamada
Rule 25    estatuto -> ciclo
Rule 26    asignacion -> ID auxAsignacion1 EQUALA expresion SEMICOLON
Rule 27    auxAsignacion1 -> LBRACKET exp RBRACKET
Rule 28    auxAsignacion1 -> <empty>
Rule 29    escritura -> PRINT LPAREN auxEscritura1 RPAREN SEMICOLON
Rule 30    auxEscritura1 -> auxEscritura2 ambAuxEscritura1
Rule 31    ambAuxEscritura1 -> COMMA auxEscritura1
Rule 32    ambAuxEscritura1 -> <empty>
Rule 33    auxEscritura2 -> expresion
Rule 34    auxEscritura2 -> CTESTRING
Rule 35    expresion -> exp auxExpresion exp
Rule 36    expresion -> <empty>
Rule 37    auxExpresion -> GTHAN
Rule 38    auxExpresion -> LTHAN
Rule 39    auxExpresion -> NOTEQUAL
Rule 40    auxExpresion -> GETHAN
Rule 41    auxExpresion -> LETHAN
Rule 42    auxExpresion -> EQUAL
Rule 43    condicion -> IF LPAREN expresion RPAREN bloque auxCondicion SEMICOLON
Rule 44    auxCondicion -> ELSE bloque
Rule 45    auxCondicion -> <empty>
Rule 46    exp -> cicloExp
Rule 47    cicloExp -> termino ambExp
Rule 48    ambExp -> auxExp cicloExp
Rule 49    ambExp -> <empty>
Rule 50    auxExp -> PLUS
Rule 51    auxExp -> MINUS
Rule 52    termino -> cicloTermino
Rule 53    cicloTermino -> factor ambCicloTermino
Rule 54    ambCicloTermino -> auxTermino cicloTermino
Rule 55    ambCicloTermino -> <empty>
Rule 56    auxTermino -> MULTI
Rule 57    auxTermino -> DIVIDE
Rule 58    factor -> LPAREN expresion RPAREN
Rule 59    factor -> auxFactor varcte
Rule 60    auxFactor -> auxExp
Rule 61    auxFactor -> <empty>
Rule 62    varcte -> ID auxVarcte
Rule 63    varcte -> CTEINT
<<<<<<< Updated upstream
Rule 64    varcte -> CTEFLOAT
=======
Rule 64    varcte -> CTREFLOAT
>>>>>>> Stashed changes
Rule 65    varcte -> CTECHAR
Rule 66    varcte -> CTEBOOL
Rule 67    varcte -> CTESTRING
Rule 68    auxVarcte -> LPAREN exp RPAREN
Rule 69    auxVarcte -> LBRACKET exp LBRACKET
Rule 70    auxVarcte -> <empty>
<<<<<<< Updated upstream
Rule 71    cicloFuncion -> funcion cicloFuncion
Rule 72    cicloFuncion -> <empty>
Rule 73    funcion -> FUNCTION ID LPAREN auxFunction RPAREN bloque
Rule 74    auxFunction -> parametros
Rule 75    auxFunction -> <empty>
Rule 76    parametros -> auxParametros
Rule 77    auxParametros -> tipo ID ambAuxParametros
Rule 78    ambAuxParametros -> COMMA auxParametros
Rule 79    ambAuxParametros -> <empty>
Rule 80    ciclo -> WHILE LPAREN expresion RPAREN bloque SEMICOLON
Rule 81    llamada -> ID LPAREN auxLlamada RPAREN
Rule 82    auxLlamada -> argumentos
Rule 83    auxLlamada -> <empty>
Rule 84    argumentos -> auxArgumentos1
Rule 85    argumentos -> <empty>
Rule 86    auxArgumentos1 -> exp ambAuxArgumentos1
Rule 87    ambAuxArgumentos1 -> COMMA auxArgumentos1
Rule 88    ambAuxArgumentos1 -> <empty>
Rule 89    lectura -> READ LPAREN ID RPAREN SEMICOLON
=======
Rule 71    funcion -> FUNCTION ID LPAREN auxFunction RPAREN bloque
Rule 72    auxFunction -> parametros
Rule 73    auxFunction -> <empty>
Rule 74    parametros -> auxParametros
Rule 75    auxParametros -> tipo ID ambAuxParametros
Rule 76    ambAuxParametros -> COMMA auxParametros
Rule 77    ambAuxParametros -> <empty>
Rule 78    ciclo -> WHILE LPAREN expresion RPAREN bloque SEMICOLON
Rule 79    llamada -> ID LPAREN auxLlamada RPAREN
Rule 80    aux_llamada -> argumentos
Rule 81    aux_llamada -> <empty>
Rule 82    argumentos -> auxArgumentos1
Rule 83    argumentos -> <empty>
Rule 84    p_auxArgumentos1 -> exp ambAuxArgumentos1
Rule 85    ambAuxArgumentos1 -> COMMA auxArgumentos1
Rule 86    ambAuxArgumentos1 -> <empty>
Rule 87    lectura -> READ LPAREN ID RPAREN SEMICOLON
>>>>>>> Stashed changes
>>>>>>> origin/master

Terminals, with rules where they appear

BOOL                 : 15
CHAR                 : 11
COLON                : 5
<<<<<<< HEAD
COMMA                : 8 32 79 88
CTEBOOL              : 67
CTECHAR              : 66
CTEFLOAT             : 65
CTEINT               : 12 64
CTESTRING            : 35 68
DIVIDE               : 58
ELSE                 : 45
EQUAL                : 43
EQUALA               : 27
FLOAT                : 17
FUNCTION             : 74
GETHAN               : 41
GTHAN                : 38
ID                   : 1 7 27 63 74 78 82 90
IF                   : 44
INT                  : 14
LBRACE               : 18
LBRACKET             : 12 28 70 70
LETHAN               : 42
LPAREN               : 30 44 59 69 74 81 82 90
LTHAN                : 39
MINUS                : 52
MULTI                : 57
NOTEQUAL             : 40
PLUS                 : 51
PRINT                : 30
PROGRAM              : 1
RBRACE               : 18
RBRACKET             : 12 28
READ                 : 90
RPAREN               : 30 44 59 69 74 81 82 90
SEMICOLON            : 1 5 27 30 44 81 90
STRING               : 16
VAR                  : 4
WHILE                : 81
=======
<<<<<<< Updated upstream
COMMA                : 8 31 78 87
CTEBOOL              : 66
CTECHAR              : 65
CTEFLOAT             : 64
=======
COMMA                : 8 31 76 85
CTEBOOL              : 66
CTECHAR              : 65
CTEFLOAT             : 
>>>>>>> Stashed changes
CTEINT               : 12 63
CTESTRING            : 34 67
DIVIDE               : 57
ELSE                 : 44
EQUAL                : 42
EQUALA               : 26
FLOAT                : 16
<<<<<<< Updated upstream
FUNCTION             : 73
GETHAN               : 40
GTHAN                : 37
ID                   : 1 7 26 62 73 77 81 89
=======
GETHAN               : 40
GTHAN                : 37
ID                   : 1 7 26 62 71 75 79 87
>>>>>>> Stashed changes
IF                   : 43
INT                  : 13
LBRACE               : 17
LBRACKET             : 12 27 69 69
LETHAN               : 41
<<<<<<< Updated upstream
LPAREN               : 29 43 58 68 73 80 81 89
=======
LPAREN               : 29 43 58 68 71 78 79 87
>>>>>>> Stashed changes
LTHAN                : 38
MINUS                : 51
MULTI                : 56
NOTEQUAL             : 39
PLUS                 : 50
PRINT                : 29
PROGRAM              : 1
RBRACE               : 17
RBRACKET             : 12 27
<<<<<<< Updated upstream
READ                 : 89
RPAREN               : 29 43 58 68 73 80 81 89
SEMICOLON            : 1 5 26 29 43 80 89
STRING               : 15
VAR                  : 4
WHILE                : 80
=======
RPAREN               : 29 43 58 68 71 78 79 87
SEMICOLON            : 1 5 26 29 43 78 87
STRING               : 15
VAR                  : 4
WHILE                : 78
>>>>>>> Stashed changes
>>>>>>> origin/master
error                : 

Nonterminals, with rules where they appear

<<<<<<< HEAD
ambAuxArgumentos1    : 87
ambAuxEscritura1     : 31
ambAuxParametros     : 78
ambCicloTermino      : 54
ambExp               : 48
ambIdVars            : 7
argumentos           : 83
asignacion           : 21
auxArgumentos1       : 85 88
auxAsignacion1       : 27
auxCondicion         : 44
auxEscritura1        : 30 32
auxEscritura2        : 31
auxExp               : 49 61
auxExpresion         : 36
auxFactor            : 60
auxFunction          : 74
auxLlamada           : 82
auxParametros        : 77 79
auxTermino           : 55
=======
<<<<<<< Updated upstream
ambAuxArgumentos1    : 86
ambAuxEscritura1     : 30
ambAuxParametros     : 77
ambCicloTermino      : 53
ambExp               : 47
ambIdVars            : 7
argumentos           : 82
asignacion           : 20
auxArgumentos1       : 84 87
=======
CTREFLOAT            : 64
ESTATUTO             : 18
FUNCTION             : 71
READ                 : 87
ambAuxArgumentos1    : 84
ambAuxEscritura1     : 30
ambAuxParametros     : 75
ambCicloTermino      : 53
ambExp               : 47
ambIdVars            : 7
argumentos           : 80
asignacion           : 20
auxArgumentos1       : 82 85
>>>>>>> Stashed changes
auxAsignacion1       : 26
auxCondicion         : 43
auxEscritura1        : 29 31
auxEscritura2        : 30
auxExp               : 48 60
auxExpresion         : 35
auxFactor            : 59
<<<<<<< Updated upstream
auxFunction          : 73
auxLlamada           : 81
auxParametros        : 76 78
=======
auxFunction          : 71
auxLlamada           : 79
auxParametros        : 74 76
>>>>>>> Stashed changes
auxTermino           : 54
>>>>>>> origin/master
auxTipo1             : 10
auxTipo2             : 12 13
auxVar1              : 4 5
<<<<<<< HEAD
auxVarcte            : 63
bloque               : 1 44 45 74 81
ciclo                : 26
cicloBloque          : 18 19
cicloExp             : 47 49
cicloFuncion         : 1 72
cicloTermino         : 53 55
cicloVars            : 1 2
condicion            : 22
escritura            : 23
estatuto             : 19
exp                  : 28 36 36 69 70 87
expresion            : 27 34 44 59 81
factor               : 54
funcion              : 72
=======
auxVarcte            : 62
<<<<<<< Updated upstream
bloque               : 1 43 44 73 80
ciclo                : 25
cicloBloque          : 17 18
cicloExp             : 46 48
cicloFuncion         : 1 71
=======
aux_llamada          : 
bloque               : 1 43 44 71 78
ciclo                : 25
cicloBloque          : 17 18
cicloExp             : 46 48
cicloFuncion         : 1
>>>>>>> Stashed changes
cicloTermino         : 52 54
cicloVars            : 1 2
condicion            : 21
escritura            : 22
<<<<<<< Updated upstream
estatuto             : 18
exp                  : 27 35 35 68 69 86
expresion            : 26 33 43 58 80
factor               : 53
funcion              : 71
>>>>>>> origin/master
idVars               : 5 8
lectura              : 24
llamada              : 25
parametros           : 75
programa             : 0
<<<<<<< HEAD
termino              : 48
tipo                 : 5 78
varcte               : 60
=======
termino              : 47
tipo                 : 5 77
=======
estatuto             : 
exp                  : 27 35 35 68 69 84
expresion            : 26 33 43 58 78
factor               : 53
funcion              : 
idVars               : 5 8
lectura              : 23
llamada              : 24
p_auxArgumentos1     : 
parametros           : 72
programa             : 0
termino              : 47
tipo                 : 5 75
>>>>>>> Stashed changes
varcte               : 59
>>>>>>> origin/master
vars                 : 2

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON cicloVars cicloFuncion bloque

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . ID SEMICOLON cicloVars cicloFuncion bloque

    ID              shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM ID . SEMICOLON cicloVars cicloFuncion bloque

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . cicloVars cicloFuncion bloque
    (2) cicloVars -> . vars cicloVars
    (3) cicloVars -> .
    (4) vars -> . VAR auxVar1

    FUNCTION        reduce using rule 3 (cicloVars -> .)
    LBRACE          reduce using rule 3 (cicloVars -> .)
    VAR             shift and go to state 7

    cicloVars                      shift and go to state 6
    vars                           shift and go to state 5

state 5

    (2) cicloVars -> vars . cicloVars
    (2) cicloVars -> . vars cicloVars
    (3) cicloVars -> .
    (4) vars -> . VAR auxVar1

    FUNCTION        reduce using rule 3 (cicloVars -> .)
    LBRACE          reduce using rule 3 (cicloVars -> .)
    VAR             shift and go to state 7

    cicloVars                      shift and go to state 8
    vars                           shift and go to state 5

state 6

    (1) programa -> PROGRAM ID SEMICOLON cicloVars . cicloFuncion bloque
    (72) cicloFuncion -> . funcion cicloFuncion
    (73) cicloFuncion -> .
    (74) funcion -> . FUNCTION ID LPAREN auxFunction RPAREN bloque

    LBRACE          reduce using rule 73 (cicloFuncion -> .)
    FUNCTION        shift and go to state 9

    cicloFuncion                   shift and go to state 10
    funcion                        shift and go to state 11

state 7

    (4) vars -> VAR . auxVar1
    (5) auxVar1 -> . idVars COLON tipo SEMICOLON auxVar1
    (6) auxVar1 -> .
    (7) idVars -> . ID ambIdVars

    VAR             reduce using rule 6 (auxVar1 -> .)
    FUNCTION        reduce using rule 6 (auxVar1 -> .)
    LBRACE          reduce using rule 6 (auxVar1 -> .)
    ID              shift and go to state 14

    idVars                         shift and go to state 12
    auxVar1                        shift and go to state 13

state 8

    (2) cicloVars -> vars cicloVars .

    FUNCTION        reduce using rule 2 (cicloVars -> vars cicloVars .)
    LBRACE          reduce using rule 2 (cicloVars -> vars cicloVars .)


state 9

    (74) funcion -> FUNCTION . ID LPAREN auxFunction RPAREN bloque

    ID              shift and go to state 15


state 10

    (1) programa -> PROGRAM ID SEMICOLON cicloVars cicloFuncion . bloque
    (18) bloque -> . LBRACE cicloBloque RBRACE

    LBRACE          shift and go to state 16

    bloque                         shift and go to state 17

state 11

    (72) cicloFuncion -> funcion . cicloFuncion
    (72) cicloFuncion -> . funcion cicloFuncion
    (73) cicloFuncion -> .
    (74) funcion -> . FUNCTION ID LPAREN auxFunction RPAREN bloque

    LBRACE          reduce using rule 73 (cicloFuncion -> .)
    FUNCTION        shift and go to state 9

    cicloFuncion                   shift and go to state 18
    funcion                        shift and go to state 11

state 12

    (5) auxVar1 -> idVars . COLON tipo SEMICOLON auxVar1

    COLON           shift and go to state 19


state 13

    (4) vars -> VAR auxVar1 .

    VAR             reduce using rule 4 (vars -> VAR auxVar1 .)
    FUNCTION        reduce using rule 4 (vars -> VAR auxVar1 .)
    LBRACE          reduce using rule 4 (vars -> VAR auxVar1 .)


state 14

    (7) idVars -> ID . ambIdVars
    (8) ambIdVars -> . COMMA idVars
    (9) ambIdVars -> .

    COMMA           shift and go to state 20
    COLON           reduce using rule 9 (ambIdVars -> .)

    ambIdVars                      shift and go to state 21

state 15

    (74) funcion -> FUNCTION ID . LPAREN auxFunction RPAREN bloque

    LPAREN          shift and go to state 22


state 16

    (18) bloque -> LBRACE . cicloBloque RBRACE
    (19) cicloBloque -> . estatuto cicloBloque
    (20) cicloBloque -> .
    (21) estatuto -> . asignacion
    (22) estatuto -> . condicion
    (23) estatuto -> . escritura
    (24) estatuto -> . lectura
    (25) estatuto -> . llamada
    (26) estatuto -> . ciclo
    (27) asignacion -> . ID auxAsignacion1 EQUALA expresion SEMICOLON
    (44) condicion -> . IF LPAREN expresion RPAREN bloque auxCondicion SEMICOLON
    (30) escritura -> . PRINT LPAREN auxEscritura1 RPAREN SEMICOLON
    (90) lectura -> . READ LPAREN ID RPAREN SEMICOLON
    (82) llamada -> . ID LPAREN auxLlamada RPAREN
    (81) ciclo -> . WHILE LPAREN expresion RPAREN bloque SEMICOLON

    RBRACE          reduce using rule 20 (cicloBloque -> .)
    ID              shift and go to state 33
    IF              shift and go to state 30
    PRINT           shift and go to state 25
    READ            shift and go to state 23
    WHILE           shift and go to state 24

    ciclo                          shift and go to state 26
    asignacion                     shift and go to state 34
    estatuto                       shift and go to state 27
    llamada                        shift and go to state 28
    condicion                      shift and go to state 29
    cicloBloque                    shift and go to state 32
    lectura                        shift and go to state 31
    escritura                      shift and go to state 35

state 17

    (1) programa -> PROGRAM ID SEMICOLON cicloVars cicloFuncion bloque .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON cicloVars cicloFuncion bloque .)


state 18

    (72) cicloFuncion -> funcion cicloFuncion .

    LBRACE          reduce using rule 72 (cicloFuncion -> funcion cicloFuncion .)


state 19

    (5) auxVar1 -> idVars COLON . tipo SEMICOLON auxVar1
    (10) tipo -> . auxTipo1
    (11) tipo -> . CHAR
    (12) auxTipo1 -> . auxTipo2 LBRACKET CTEINT RBRACKET
    (13) auxTipo1 -> . auxTipo2
    (14) auxTipo2 -> . INT
    (15) auxTipo2 -> . BOOL
    (16) auxTipo2 -> . STRING
    (17) auxTipo2 -> . FLOAT

    CHAR            shift and go to state 39
    INT             shift and go to state 37
    BOOL            shift and go to state 40
    STRING          shift and go to state 43
    FLOAT           shift and go to state 38

    auxTipo1                       shift and go to state 41
    auxTipo2                       shift and go to state 42
    tipo                           shift and go to state 36

state 20

    (8) ambIdVars -> COMMA . idVars
    (7) idVars -> . ID ambIdVars

    ID              shift and go to state 14

    idVars                         shift and go to state 44

state 21

    (7) idVars -> ID ambIdVars .

    COLON           reduce using rule 7 (idVars -> ID ambIdVars .)


state 22

    (74) funcion -> FUNCTION ID LPAREN . auxFunction RPAREN bloque
    (75) auxFunction -> . parametros
    (76) auxFunction -> .
    (77) parametros -> . auxParametros
    (78) auxParametros -> . tipo ID ambAuxParametros
    (10) tipo -> . auxTipo1
    (11) tipo -> . CHAR
    (12) auxTipo1 -> . auxTipo2 LBRACKET CTEINT RBRACKET
    (13) auxTipo1 -> . auxTipo2
    (14) auxTipo2 -> . INT
    (15) auxTipo2 -> . BOOL
    (16) auxTipo2 -> . STRING
    (17) auxTipo2 -> . FLOAT

    RPAREN          reduce using rule 76 (auxFunction -> .)
    CHAR            shift and go to state 39
    INT             shift and go to state 37
    BOOL            shift and go to state 40
    STRING          shift and go to state 43
    FLOAT           shift and go to state 38

    tipo                           shift and go to state 45
    auxFunction                    shift and go to state 46
    auxParametros                  shift and go to state 47
    auxTipo2                       shift and go to state 42
    parametros                     shift and go to state 48
    auxTipo1                       shift and go to state 41

state 23

    (90) lectura -> READ . LPAREN ID RPAREN SEMICOLON

    LPAREN          shift and go to state 49


state 24

    (81) ciclo -> WHILE . LPAREN expresion RPAREN bloque SEMICOLON

    LPAREN          shift and go to state 50


state 25

    (30) escritura -> PRINT . LPAREN auxEscritura1 RPAREN SEMICOLON

    LPAREN          shift and go to state 51


state 26

    (26) estatuto -> ciclo .

    ID              reduce using rule 26 (estatuto -> ciclo .)
    IF              reduce using rule 26 (estatuto -> ciclo .)
    PRINT           reduce using rule 26 (estatuto -> ciclo .)
    READ            reduce using rule 26 (estatuto -> ciclo .)
    WHILE           reduce using rule 26 (estatuto -> ciclo .)
    RBRACE          reduce using rule 26 (estatuto -> ciclo .)


state 27

    (19) cicloBloque -> estatuto . cicloBloque
    (19) cicloBloque -> . estatuto cicloBloque
    (20) cicloBloque -> .
    (21) estatuto -> . asignacion
    (22) estatuto -> . condicion
    (23) estatuto -> . escritura
    (24) estatuto -> . lectura
    (25) estatuto -> . llamada
    (26) estatuto -> . ciclo
    (27) asignacion -> . ID auxAsignacion1 EQUALA expresion SEMICOLON
    (44) condicion -> . IF LPAREN expresion RPAREN bloque auxCondicion SEMICOLON
    (30) escritura -> . PRINT LPAREN auxEscritura1 RPAREN SEMICOLON
    (90) lectura -> . READ LPAREN ID RPAREN SEMICOLON
    (82) llamada -> . ID LPAREN auxLlamada RPAREN
    (81) ciclo -> . WHILE LPAREN expresion RPAREN bloque SEMICOLON

    RBRACE          reduce using rule 20 (cicloBloque -> .)
    ID              shift and go to state 33
    IF              shift and go to state 30
    PRINT           shift and go to state 25
    READ            shift and go to state 23
    WHILE           shift and go to state 24

    ciclo                          shift and go to state 26
    asignacion                     shift and go to state 34
    estatuto                       shift and go to state 27
    llamada                        shift and go to state 28
    condicion                      shift and go to state 29
    cicloBloque                    shift and go to state 52
    lectura                        shift and go to state 31
    escritura                      shift and go to state 35

state 28

    (25) estatuto -> llamada .

    ID              reduce using rule 25 (estatuto -> llamada .)
    IF              reduce using rule 25 (estatuto -> llamada .)
    PRINT           reduce using rule 25 (estatuto -> llamada .)
    READ            reduce using rule 25 (estatuto -> llamada .)
    WHILE           reduce using rule 25 (estatuto -> llamada .)
    RBRACE          reduce using rule 25 (estatuto -> llamada .)


state 29

    (22) estatuto -> condicion .

    ID              reduce using rule 22 (estatuto -> condicion .)
    IF              reduce using rule 22 (estatuto -> condicion .)
    PRINT           reduce using rule 22 (estatuto -> condicion .)
    READ            reduce using rule 22 (estatuto -> condicion .)
    WHILE           reduce using rule 22 (estatuto -> condicion .)
    RBRACE          reduce using rule 22 (estatuto -> condicion .)


state 30

    (44) condicion -> IF . LPAREN expresion RPAREN bloque auxCondicion SEMICOLON

    LPAREN          shift and go to state 53


state 31

    (24) estatuto -> lectura .

    ID              reduce using rule 24 (estatuto -> lectura .)
    IF              reduce using rule 24 (estatuto -> lectura .)
    PRINT           reduce using rule 24 (estatuto -> lectura .)
    READ            reduce using rule 24 (estatuto -> lectura .)
    WHILE           reduce using rule 24 (estatuto -> lectura .)
    RBRACE          reduce using rule 24 (estatuto -> lectura .)


state 32

    (18) bloque -> LBRACE cicloBloque . RBRACE

    RBRACE          shift and go to state 54


state 33

    (27) asignacion -> ID . auxAsignacion1 EQUALA expresion SEMICOLON
    (82) llamada -> ID . LPAREN auxLlamada RPAREN
    (28) auxAsignacion1 -> . LBRACKET exp RBRACKET
    (29) auxAsignacion1 -> .

    LPAREN          shift and go to state 57
    LBRACKET        shift and go to state 56
    EQUALA          reduce using rule 29 (auxAsignacion1 -> .)

    auxAsignacion1                 shift and go to state 55

state 34

    (21) estatuto -> asignacion .
